# django-nitro

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  context.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  tests.yml
api-reference/: index.html
changelog/: index.html
components/alpine-components/: index.html
components/base-list-component/: index.html
components/crud-nitro-component/: index.html
components/html-components/: index.html
components/model-nitro-component/: index.html
components/nitro-component/: index.html
components/overview/: index.html
contributing/: index.html
core-concepts/TOAST_ADAPTERS/: index.html
core-concepts/actions/: index.html
core-concepts/cli-tools/: index.html
core-concepts/components/: index.html
core-concepts/debugging/: index.html
core-concepts/events/: index.html
core-concepts/form-fields/: index.html
core-concepts/forms-wizards/: index.html
core-concepts/multi-tenancy/: index.html
core-concepts/smart-updates/: index.html
core-concepts/state-management/: index.html
core-concepts/tables-filters/: index.html
core-concepts/template-tags/: index.html
core-concepts/views/: index.html
core-concepts/zero-javascript-mode/: index.html
docs/: api-reference.md  changelog.md  contributing.md  index.md
docs/components/: alpine-components.md  base-list-component.md  crud-nitro-component.md  html-components.md  model-nitro-component.md  nitro-component.md  overview.md
docs/core-concepts/: TOAST_ADAPTERS.md  actions.md  cli-tools.md  components.md  debugging.md  events.md  form-fields.md  forms-wizards.md  multi-tenancy.md  smart-updates.md  state-management.md  tables-filters.md  template-tags.md  views.md  zero-javascript-mode.md
docs/examples/: counter.md  property-manager.md
docs/getting-started/: installation.md  quick-start.md
docs/migration/: from-v07.md
docs/security/: overview.md  ownership-mixin.md  permission-mixin.md  tenant-scoped-mixin.md
docs/utilities/: currency.md  dates.md  exports.md
example/: README.md  requirements.txt
example/app/: urls.py
example/properties/: admin.py  schemas.py
examples/: README.md
examples/contact-form/: README.md  app.py  component.py  template.html
examples/counter/: README.md  index.html
examples/file-upload/: README.md
examples/property-manager/: index.html
getting-started/installation/: index.html
migration/from-v07/: index.html
nitro/: CHANGELOG.md  COMPONENTS.md  README.md  ROADMAP.md  __init__.py  api.py  base.py  forms.py  list.py  tests.py  tests_real_world.py  utils.py  views.py
search/: search_index.json
(+54 files in other folders)
