[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-nitro"
version = "0.8.0"
description = "Server-rendered Django views with HTMX + Alpine.js - No JavaScript required"
readme = "README.md"
authors = [
    {name = "Jearel Alcantara", email = "jeasoft@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["django", "htmx", "alpinejs", "server-rendered", "template-tags"]
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "django-stubs>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/django-nitro/django-nitro"
Documentation = "https://github.com/django-nitro/django-nitro#readme"
Repository = "https://github.com/django-nitro/django-nitro"
Issues = "https://github.com/django-nitro/django-nitro/issues"

[tool.setuptools]
packages = ["nitro", "nitro.templatetags", "nitro.utils", "nitro.management", "nitro.management.commands"]
include-package-data = true

[tool.setuptools.package-data]
nitro = [
    "static/**/*",
    "templates/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP046", # Generic class uses Generic subclass (keep for clarity)
]

[tool.ruff.lint.isort]
known-first-party = ["nitro"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
